--- a/projects.html
+++ b/projects.html
@@ -121,8 +121,8 @@
 						<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 						
 						<ul class="contact">
-							<li class="icon solid fa-phone">(+234) 080 2214 7526</li>
-							<li class="icon solid fa-envelope">victordanok@gmail.com</li>
+							<li class="icon solid fa-phone"><a href="+2348022147526">Call +234 8022147526</a></li>
+							<li class="icon solid fa-envelope"><a href="mailto:victordanok@gmail.com">Email Victor</a></li>
 							<li class="icon brands fa-linkedin-in"><a href="https://www.linkedin.com/in/victordanok/">LinkedIn</a></li>
 							<li class="icon brands fa-github"><a href="https://github.com/victordanok"> GitHub</a></li>
 						</ul>
