--- a/projects.html
+++ b/projects.html
@@ -44,8 +44,6 @@
 						<header>
 							<div class="inner">
 								<h2>My Previous Work</h2>
-								<p>These are the stuff I have done during my journey towards sharpening my skills as I well
-									grounded data scientist. I have demonstrated the following skills in .</p>
 							</div>
 						</header>
 
@@ -55,38 +53,42 @@
 
 									<section>
 										<h3 class="major">Loan Prediction</h3>
-										<a href="#" class="image fit"><img src="images/loan2.jpeg" alt="" /></a>
+										<a href="https://github.com/victordanok/Loan-Prediction-ML" class="image fit"><img src="images/loan2.jpeg" alt="" /></a>
+										<p>Skills demonstrated: data visualization, machine learning algorithms,Supervised learning, model development</p>
 										<p>This is for text. 
-										<a href="#" class="special">Learn more</a></p>
-										<p>Skills demonstrated: </p>
+										<a href="https://github.com/victordanok/Loan-Prediction-ML" class="special">Learn more</a></p>
 									</section>
 
 									<section>
 										<h3 class="major">Customer Segmentation</h3>
-										<a href="#" class="image fit"><img src="images/cusseg.jpg" alt="" /></a>
+										<a href="https://github.com/victordanok/KPMG-Forage-Internship" class="image fit"><img src="images/cusseg.jpg" alt="" /></a>
+										<p>Skills demonstrated: data visualization, machine learning algorithms,unsupervised learning, clustering, model development</p>
 										<p>This is for text. 
-										<a href="#" class="special">Learn more</a></p>
+										<a href="https://github.com/victordanok/KPMG-Forage-Internship" class="special">Learn more</a></p>
 									</section>
 						
 									<section>
 										<h3 class="major">Credit Card Fraud Detection</h3>
-										<a href="#" class="image fit"><img src="images/fraud1.jpg" alt="" /></a>
+										<a href="https://github.com/victordanok/Credit-Card-Fraud-Detection" class="image fit"><img src="images/fraud1.jpg" alt="" /></a>
+										<p>Skills demonstrated: data visualization, machine learning algorithms,Supervised learning,imbalanced dataset</p>
 										<p>This is for text. 
-										<a href="#" class="special">Learn more</a></p>
+										<a href="https://github.com/victordanok/Credit-Card-Fraud-Detection" class="special">Learn more</a></p>
 									</section>
 
 									<section>
 										<h3 class="major">Lagos Temperature Data</h3>
-										<a href="#" class="image fit"><img src="images/temp.jpg" alt="" /></a>
+										<a href="https://github.com/victordanok/Lagos-Temperature-Data" class="image fit"><img src="images/temp.jpg" alt="" /></a>
+										<p>Skills demonstrated: data visualization, exploratory data analysis</p>
 										<p>This is for text. 
-										<a href="#" class="special">Learn more</a></p>	
+										<a href="https://github.com/victordanok/Lagos-Temperature-Data" class="special">Learn more</a></p>	
 									</section>
 
 									<section>
 										<h3 class="major">No Show Hospital Appointments</h3>
-										<a href="#" class="image fit"><img src="images/hosp.jpg" alt="" /></a>
+										<a href="https://github.com/victordanok/Data-Exploration-Using-No_show-Hospital-Appointment" class="image fit"><img src="images/hosp.jpg" alt="" /></a>
+										<p>Skills demonstrated: data visualization, exploratory data analysis</p>
 										<p>This is for text. 
-										<a href="#" class="special">Learn more</a></p>
+										<a href="https://github.com/victordanok/Data-Exploration-Using-No_show-Hospital-Appointment" class="special">Learn more</a></p>
 									</section>
 
 									<section>
@@ -117,8 +119,8 @@
 				<!-- Footer -->
 				<section id="footer">
 					<div class="inner">
-						<h2 class="major">Get in touch</h2>
-						<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+						<h2 class="major">Contact Me</h2>
+						<p>		</p>
 						
 						<ul class="contact">
 							<li class="icon solid fa-phone"><a href="+2348022147526">Call +234 8022147526</a></li>
