--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/web-application.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Model Deployment | API Development</h2>
 										<p>Deploying models on cloud platforms such as Heroku and streamlit.
