--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<a href="#" class="image"><img src="images/web-application.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Model Deployment | API Development</h2>
-										<p>Deploying models on cloud platforms such as Heroku and streamlit.
+										<p> Model development using streamlit, Deploying models on cloud platforms.
 											 API development using Flask API.</p>
 										
 									</div>
@@ -124,8 +124,8 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<h2 class="major">Contact Me</h2>
+							<p>  </p>
 							
 							<ul class="contact">
 								<li class="icon solid fa-phone"><a href="+2348022147526">Call +234 8022147526</a></li>
