--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<a class="image fit" ><img src="images/dsmain.jpg" alt="" /></a>
-							<h2><em>Hi, I am Victor</marquee></em></h2>
-							<p><marquee>Welcome to my data science Portfolio...</marquee></p>
+							<h2>Data Science Portfolio</h2>
+							<p><marquee>Hello! I am Victordanok</marquee></p>
 						</div>
 					</section>
 
