--- a/projects.html
+++ b/projects.html
@@ -54,41 +54,50 @@
 									<section>
 										<h3 class="major">Loan Prediction</h3>
 										<a href="https://github.com/victordanok/Loan-Prediction-ML" class="image fit"><img src="images/loan2.jpeg" alt="" /></a>
-										<p>Skills demonstrated: data visualization, machine learning algorithms,Supervised learning, model development</p>
-										<p>This is for text. 
-										<a href="https://github.com/victordanok/Loan-Prediction-ML" class="special">Learn more</a></p>
+										<p><i>Skills demonstrated: data visualization, machine learning algorithms,Supervised learning, model development</i></p>
+										<p> Here a model was built to determine clients that should be granted their loan application based on their demographic
+											and financial traits. This classification model was trained using Logistic Regression, Random Forest, Naive Bayes, Decision Tree.
+											With Logistic Regression outperforming the rest in its higher precision and accuracy for the model.
+											<a href="https://github.com/victordanok/Loan-Prediction-ML" class="special">Learn more</a></p>
 									</section>
 
 									<section>
 										<h3 class="major">Customer Segmentation</h3>
 										<a href="https://github.com/victordanok/KPMG-Forage-Internship" class="image fit"><img src="images/cusseg.jpg" alt="" /></a>
-										<p>Skills demonstrated: data visualization, machine learning algorithms,unsupervised learning, clustering, model development</p>
-										<p>This is for text. 
+										<p><i>Skills demonstrated: data visualization, machine learning algorithms,unsupervised learning, clustering, model development</i></p>
+										<p>This is a market Segmentation project from <a href='https://www.theforage.com/virtual-internships/theme/m7W4GMqeT3bh9Nb2c/KPMG-Data-Analytics-Virtual-Internship?ref=iBJmJmpMs5SL2LXnk'> KPMG Virtual Internship on Forage</a>
+											 in which customers were grouped into clusters and targeted for specialized marketing based
+											on the similar characteristics in the cluster. The dataset involved both numerical and categorical variables, hence K-Prototypes
+											was implement as the unsupervised machine learning algorithm to effectively cluster the data.
 										<a href="https://github.com/victordanok/KPMG-Forage-Internship" class="special">Learn more</a></p>
 									</section>
 						
 									<section>
 										<h3 class="major">Credit Card Fraud Detection</h3>
 										<a href="https://github.com/victordanok/Credit-Card-Fraud-Detection" class="image fit"><img src="images/fraud1.jpg" alt="" /></a>
-										<p>Skills demonstrated: data visualization, machine learning algorithms,Supervised learning,imbalanced dataset</p>
-										<p>This is for text. 
+										<p><i>Skills demonstrated: data visualization, machine learning algorithms,Supervised learning,imbalanced dataset</i></p>
+										<p>Using an imbalanced dataset gotten from <a href='https://www.kaggle.com/mlg-ulb/creditcardfraud'> Kaggle </a>,
+											a model was built to predict fraudulent credit card transactions, the model was trained using Random Forest as it had the highest
+											precision-recall accuracy. The accuracy of the model was measured using the area under the Precision-recall curve(AUPRC).
+
 										<a href="https://github.com/victordanok/Credit-Card-Fraud-Detection" class="special">Learn more</a></p>
 									</section>
 
 									<section>
 										<h3 class="major">Lagos Temperature Data</h3>
 										<a href="https://github.com/victordanok/Lagos-Temperature-Data" class="image fit"><img src="images/temp.jpg" alt="" /></a>
-										<p>Skills demonstrated: data visualization, exploratory data analysis</p>
-										<p>This is for text. 
+										<p><i>Skills demonstrated: data visualization, exploratory data analysis</i></p>
+										<p> The city temperature of Lagos state was compared to that of the world over a time period of 150 years and various conclusions were drawn
+											about the relationships between both temperatures. And we could also see the influence of global warming on the city and the world.
 										<a href="https://github.com/victordanok/Lagos-Temperature-Data" class="special">Learn more</a></p>	
 									</section>
 
 									<section>
 										<h3 class="major">No Show Hospital Appointments</h3>
 										<a href="https://github.com/victordanok/Data-Exploration-Using-No_show-Hospital-Appointment" class="image fit"><img src="images/hosp.jpg" alt="" /></a>
-										<p>Skills demonstrated: data visualization, exploratory data analysis</p>
-										<p>This is for text. 
-										<a href="https://github.com/victordanok/Data-Exploration-Using-No_show-Hospital-Appointment" class="special">Learn more</a></p>
+										<p><i>Skills demonstrated: data visualization, exploratory data analysis</i></p>
+										<p>From an hospital patient data, the relationships between the various features were investigated and conclusions were made about the patients state of health
+											as well as the relationships between the various illness plaguing the patients.										<a href="https://github.com/victordanok/Data-Exploration-Using-No_show-Hospital-Appointment" class="special">Learn more</a></p>
 									</section>
 
 									<section>
