--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,8 @@
 
 									<section>
 										<h3 class="major">Visualizations</h3>
-										<h4>Fit</h4>
+										<h4>Tableau</h4>
+										<p>For visualizations and dashboards, kindly view my <a href="https://public.tableau.com/app/profile/victor.okhihie">Tableau Online Public profile</a> </p>
 										<div class="box alt">
 											<div class="row gtr-uniform">
 												<div class="col-12"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
