--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<a class="image fit" ><img src="images/dsmain.jpg" alt="" /></a>
 							<h2>Data Science Portfolio</h2>
-							<p><marquee>Hello! I am Victordanok</marquee></p>
+							<p><marquee>Hello! I am Victor</marquee></p>
 						</div>
 					</section>
 
