--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<div class="content">
 										<h2 class="major">Data Wrangling | Analysis | Visualizations</h2>
 										<p> 
-											Webscraping, data cleaning and data transformations using python libraries Numpy and Pandas. 
+											Webscraping, data cleaning and data transformation using python libraries Numpy and Pandas. 
 											Data storytelling using matplotlib, seaborn and Tableau.
 										</p>
 										
