--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 										<article>
 											<a href="https://github.com/victordanok/KPMG-Forage-Internship" class="image"><img src="images/cusseg.jpg" alt="" /></a>
 											<h3 class="major">Customer Segmentation</h3>
-											<p>Build a model to predict the customers that should be targeted for product marketing..</p>
+											<p> Segment the customers into different classes for easy identification for an optimized market strategy</p>
 											<a href="https://github.com/victordanok/KPMG-Forage-Internship" class="special">Learn more</a>
 										</article>
 									
