--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
 										<h3 class="major">Loan Prediction</h3>
 										<a href="https://github.com/victordanok/Loan-Prediction-ML" class="image fit"><img src="images/loan2.jpeg" alt="" /></a>
 										<p><i>Skills demonstrated: data visualization, machine learning algorithms,Supervised learning, model development</i></p>
-										<p> Here a model was built to determine clients that should be granted their loan application based on their demographic
+										<p> Here a model was trained to determine clients that should be granted their loan application based on their demographic
 											and financial traits. This classification model was trained using Logistic Regression, Random Forest, Naive Bayes, Decision Tree.
 											With Logistic Regression outperforming the rest in its higher precision and accuracy for the model.
 											<a href="https://github.com/victordanok/Loan-Prediction-ML" class="special">Learn more</a></p>
@@ -67,8 +67,8 @@
 										<p><i>Skills demonstrated: data visualization, machine learning algorithms,unsupervised learning, clustering, model development</i></p>
 										<p>This is a market Segmentation project from <a href='https://www.theforage.com/virtual-internships/theme/m7W4GMqeT3bh9Nb2c/KPMG-Data-Analytics-Virtual-Internship?ref=iBJmJmpMs5SL2LXnk'> KPMG Virtual Internship on Forage</a>
 											 in which customers were grouped into clusters and targeted for specialized marketing based
-											on the similar characteristics in the cluster. The dataset involved both numerical and categorical variables, hence K-Prototypes
-											was implement as the unsupervised machine learning algorithm to effectively cluster the data.
+											on the similar characteristics in the cluster. Using the recency, frequency and monetary values, the customers were grouped and classed according to
+											their contributions to the organization.
 										<a href="https://github.com/victordanok/KPMG-Forage-Internship" class="special">Learn more</a></p>
 									</section>
 						
@@ -77,7 +77,7 @@
 										<a href="https://github.com/victordanok/Credit-Card-Fraud-Detection" class="image fit"><img src="images/fraud1.jpg" alt="" /></a>
 										<p><i>Skills demonstrated: data visualization, machine learning algorithms,Supervised learning,imbalanced dataset</i></p>
 										<p>Using an imbalanced dataset gotten from <a href='https://www.kaggle.com/mlg-ulb/creditcardfraud'> Kaggle </a>,
-											a model was built to predict fraudulent credit card transactions, the model was trained using Random Forest as it had the highest
+											a model was trained to predict fraudulent credit card transactions, the model was trained using Random Forest as it had the highest
 											precision-recall accuracy. The accuracy of the model was measured using the area under the Precision-recall curve(AUPRC).
 
 										<a href="https://github.com/victordanok/Credit-Card-Fraud-Detection" class="special">Learn more</a></p>
