--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
 									<section>
 										<h3 class="major">Loan Prediction</h3>
 										<a href="https://github.com/victordanok/Loan-Prediction-ML" class="image fit"><img src="images/loan2.jpeg" alt="" /></a>
-										<p><i>Skills demonstrated: data visualization, machine learning algorithms,Supervised learning, model development</i></p>
+										<p><i>Skills: python, machine learning, streamlit, supervised learning, data analysis</i></p>
 										<p> Here a model was trained to determine clients that should be granted their loan application based on their demographic
 											and financial traits. This classification model was trained using Logistic Regression, Random Forest, Naive Bayes, Decision Tree.
 											With Logistic Regression outperforming the rest in its higher precision and accuracy for the model.
@@ -64,7 +64,7 @@
 									<section>
 										<h3 class="major">Customer Segmentation</h3>
 										<a href="https://github.com/victordanok/KPMG-Forage-Internship" class="image fit"><img src="images/cusseg.jpg" alt="" /></a>
-										<p><i>Skills demonstrated: data visualization, machine learning algorithms,unsupervised learning, clustering, model development</i></p>
+										<p><i>Skills: python, data visualization, machine learning,unsupervised learning, marketing analytics, data analysis, product analysis</i></p>
 										<p>This is a market Segmentation project from <a href='https://www.theforage.com/virtual-internships/theme/m7W4GMqeT3bh9Nb2c/KPMG-Data-Analytics-Virtual-Internship?ref=iBJmJmpMs5SL2LXnk'> KPMG Virtual Internship on Forage</a>
 											 in which customers were grouped into clusters and targeted for specialized marketing based
 											on the similar characteristics in the cluster. Using the recency, frequency and monetary values, the customers were grouped and classed according to
@@ -75,7 +75,7 @@
 									<section>
 										<h3 class="major">Credit Card Fraud Detection</h3>
 										<a href="https://github.com/victordanok/Credit-Card-Fraud-Detection" class="image fit"><img src="images/fraud1.jpg" alt="" /></a>
-										<p><i>Skills demonstrated: data visualization, machine learning algorithms,Supervised learning,imbalanced dataset</i></p>
+										<p><i>Skills: data analysis, data visualization, machine learning, Supervised learning, python </i></p>
 										<p>Using an imbalanced dataset gotten from <a href='https://www.kaggle.com/mlg-ulb/creditcardfraud'> Kaggle </a>,
 											a model was trained to predict fraudulent credit card transactions, the model was trained using Random Forest as it had the highest
 											precision-recall accuracy. The accuracy of the model was measured using the area under the Precision-recall curve(AUPRC).
@@ -86,7 +86,7 @@
 									<section>
 										<h3 class="major">Lagos Temperature Data</h3>
 										<a href="https://github.com/victordanok/Lagos-Temperature-Data" class="image fit"><img src="images/temp.jpg" alt="" /></a>
-										<p><i>Skills demonstrated: data visualization, exploratory data analysis</i></p>
+										<p><i>Skills: data visualization, data analysis, python</i></p>
 										<p> The city temperature of Lagos state was compared to that of the world over a time period of 150 years and various conclusions were drawn
 											about the relationships between both temperatures. And we could also see the influence of global warming on the city and the world.
 										<a href="https://github.com/victordanok/Lagos-Temperature-Data" class="special">Learn more</a></p>	
@@ -95,7 +95,7 @@
 									<section>
 										<h3 class="major">No Show Hospital Appointments</h3>
 										<a href="https://github.com/victordanok/Data-Exploration-Using-No_show-Hospital-Appointment" class="image fit"><img src="images/hosp.jpg" alt="" /></a>
-										<p><i>Skills demonstrated: data visualization, exploratory data analysis</i></p>
+										<p><i>Skills: data analysis, data visualization, python</i></p>
 										<p>From an hospital patient data, the relationships between the various features were investigated and conclusions were made about the patients state of health
 											as well as the relationships between the various illness plaguing the patients.										<a href="https://github.com/victordanok/Data-Exploration-Using-No_show-Hospital-Appointment" class="special">Learn more</a></p>
 									</section>
